--- a/nuspec/XLabs.IoC.TinyIOC.nuspec
+++ b/nuspec/XLabs.IoC.TinyIOC.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>XLabs.IoC.TinyIOC</id>
-    <version>2.5837.6</version>
+    <version>2.5837.12</version>
     <title>XLabs - IoC - TinyIOC</title>
     <authors>XLabs Team</authors>
     <owners>XLabs Team</owners>
@@ -17,7 +17,7 @@
     <tags>Xamarin XLabs IOC TinyIOC</tags>
     <dependencies>
       <group>
-        <dependency id="XLabs.IoC" version="[2.5837.6]" />
+        <dependency id="XLabs.IoC" version="[2.5837.12]" />
       </group>
     </dependencies>
   </metadata>
@@ -34,7 +34,7 @@
     <file src="..\src\IOC\XLabs.IOC.TinyIOC.Net45\bin\$configuration$\XLabs.IOC.TinyIOC.Net45.dll" target="lib\net45" />
     <file src="..\src\IOC\XLabs.IOC.TinyIOC.Net45\bin\$configuration$\XLabs.IOC.TinyIOC.Net45.pdb" target="lib\net45" />
     <!-- Assemblies: Windows 10 -->
-    <file src="..\src\IOC\XLabs.IOC.TinyIOC.UWP\bin\$configuration$\XLabs.IOC.TinyIOC.UWP.dll" target="lib\uap10.0" />
-    <file src="..\src\IOC\XLabs.IOC.TinyIOC.UWP\bin\$configuration$\XLabs.IOC.TinyIOC.UWP.pdb" target="lib\uap10.0" />
+    <!--<file src="..\src\IOC\XLabs.IOC.TinyIOC.UWP\bin\$configuration$\XLabs.IOC.TinyIOC.UWP.dll" target="lib\uap10.0" />
+    <file src="..\src\IOC\XLabs.IOC.TinyIOC.UWP\bin\$configuration$\XLabs.IOC.TinyIOC.UWP.pdb" target="lib\uap10.0" />-->
   </files>
 </package>
